--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ favourite module&gt;</span></li>
       <td style="vertical-align: top;">The code in each cell is
 executed similarly to a Python script. Pyspread does not limit what
 this code can do. This powerful feature has its drawbacks. A
-spreadsheet may very well delete your hard
+spreadsheet may very well delete everything ion your hard
 drive or send your data via the Internet. Of course this is a
 non-issue if you sandbox properly or if you only use self developed
 spreadsheets. <br>
