--- a/contribute.html
+++ b/contribute.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <title>Pyspread - Docs</title>
+  <title>Pyspread - News</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="Author" content="Martin Manns">
   <meta name="description"
@@ -116,11 +116,10 @@ h3 {
 </div>
 <!-- Menu -->
 <div id="menu"><a class="menu" href="index.html">home</a>&nbsp;
-|&nbsp;&nbsp; <a class="menu" href="news.html"></a><a class="menu"
- href="download.html">download</a>&nbsp;
+|&nbsp;&nbsp; <a class="menu" href="download.html">download</a>&nbsp;
+|&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
 |&nbsp;&nbsp; <a style="text-decoration: overline; color: black;"
- class="menu" href="docs.html">docs</a>&nbsp;
-|&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
+ class="menu" href="contribute.html">contribute</a>&nbsp;
 |&nbsp;&nbsp;
 <a class="menu" href="http://sourceforge.net/tracker/?group_id=224598"
  target="_blank">bugs</a><a class="menu"
@@ -128,55 +127,104 @@ h3 {
 </div>
 <p>
 </p>
-<br>
 <table
  style="text-align: left; width: 100%; margin-left: auto; margin-right: auto;"
  cellpadding="15" cellspacing="0" border="0">
   <tbody>
     <tr>
       <th
- style="vertical-align: top; background-color: white; width: 102px;">user
-manual<br>
+ style="vertical-align: top; background-color: white; width: 102px;">How
+to help<br>
       </th>
-      <td style="vertical-align: top;">First steps into pyspread.</td>
+      <td>
+      <h3 style="font-weight: bold; margin-top: 0px; height: 20px;"><span
+ style="font-weight: bold;">pyspread 0.1.1 released </span><span
+ style="font-size: small; font-weight: normal;">(2010-05-08)</span></h3>
+Bugfix release with major speed ups.
+      <p>This version speeds up the grid by making use of Blit
+operations.
+On Windows, there are some issues about rotated text that is overlapped
+by backgrounds of cells that are above or left.
+No fix yet because the grid is slower in Windows anyways. On Linux
+everything should run fine. </p>
+      <p>Bug fixes: </p>
+      <ul>
+        <li>Grid is faster.</li>
+        <li>Copying only partly filled cells works now.</li>
+        <li>Cells that get attributes but no string no longer display
+None.</li>
+      </ul>
+      </td>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="width: 211px;"><br>
       </td>
     </tr>
     <tr>
-      <th style="vertical-align: top;">Tutorial<br>
+      <th style="vertical-align: top; width: 102px;"> to do list<br>
       </th>
-      <td style="vertical-align: top;">The pyspread tutorial.<br>
+      <td>
+      <h3 style="margin-top: 2px; height: 15px;"><span
+ style="font-weight: bold;">pyspread 0.1 released</span> <span
+ style="font-size: small; font-weight: normal;">(2010-03-20)</span></h3>
+After a long and eventful Alpha period, pyspread has finally reached
+Beta stage.<br>
+I thank all contributors and testers who have helped getting pyspread
+to this point.
+      <p>Pyspread runs pretty stable in CPython. Please note that old
+save files are not compatible. Load them in the old version and copy
+the code to a new version of pyspread via the clipboard.<br>
+Being in Beta means increased code stability. Save files are now going
+to be downwards compatible. However, major beta releases (e. g. 0.1 to
+0.2) may still break compatibility. Such a change may occur only after
+being announced in the previous major beta release. </p>
+      <p>New features: </p>
+      <ul>
+        <li>New macro editor dialog.</li>
+        <li>Macros can now contain any Python code.</li>
+        <li>Macros load and save files are now plain text files.</li>
+        <li>Macros are now saved within the pys-file.</li>
+        <li>Macros files are now signed and included in the trusted
+file concept.</li>
+      </ul>
+Bug fixes:
+      <ul>
+        <li>Cells can now be correctly accessed with negative index
+(BUG 2965144)</li>
+      </ul>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
+      <td style="width: 211px;"><br>
+      <a href="images/screenshot_fonts.png"><br>
+      </a> </td>
     </tr>
     <tr>
-      <th style="vertical-align: top;">faq<br>
+      <th style="vertical-align: top; width: 102px;">Adding your code<br>
       </th>
-      <td style="vertical-align: top;">Frequently asked questions.<br>
+      <td>
+      <h3 style="margin-top: 1px; height: 16px;"><span
+ style="font-weight: bold;">ODF format support but not for now</span> <span
+ style="font-size: small; font-weight: normal;">(2009-11-19)</span></h3>
+Standardized file formats are great when it comes to data exchange with
+other Office packages.
+ODF seemed a good choice. However, the parsing code needs too much
+coding time and still performs much too slow.
+Therefore, I have removed the interface from the code base. Starting
+from 0.0.12a, the file format will be an improved pys format. In fact,
+it is compatible to the old pys files.
+      <p>If you need ODF support, you are welcome to contribute. The
+ODF code is still available. </p>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-    </tr>
-    <tr>
-      <th style="vertical-align: top;">podcast<br>
-      </th>
-      <td style="vertical-align: top;">How to import large amounts of
-data.<br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
+      <td style="width: 211px;"><br>
       </td>
     </tr>
   </tbody>
 </table>
+<p>
+</p>
 <p><span style="font-style: italic;"><small>Copyright 2008-2011 Martin
 Manns</small></span><br style="font-style: italic;">
 <span style="font-style: italic;"><small>Last changed: 23. December 2011</small>
