Web page improved

--- a/contribute.html
+++ b/contribute.html
@@ -134,26 +134,13 @@ h3 {
     <tr>
       <th
  style="vertical-align: top; background-color: white; width: 102px;">How
-to help<br>
+to
+help<br>
       </th>
-      <td>
-      <h3 style="font-weight: bold; margin-top: 0px; height: 20px;"><span
- style="font-weight: bold;">pyspread 0.1.1 released </span><span
- style="font-size: small; font-weight: normal;">(2010-05-08)</span></h3>
-Bugfix release with major speed ups.
-      <p>This version speeds up the grid by making use of Blit
-operations.
-On Windows, there are some issues about rotated text that is overlapped
-by backgrounds of cells that are above or left.
-No fix yet because the grid is slower in Windows anyways. On Linux
-everything should run fine. </p>
-      <p>Bug fixes: </p>
-      <ul>
-        <li>Grid is faster.</li>
-        <li>Copying only partly filled cells works now.</li>
-        <li>Cells that get attributes but no string no longer display
-None.</li>
-      </ul>
+      <td>Thank you for wanting to help pyspread. You can help me with
+bug reports, translations, icons, coding, ideas and much more.<br>
+      <br>
+To contact me, send me an <a href="mailto://mmanns@gmx.net">e-mail</a>.<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -164,33 +151,13 @@ None.</li>
       <th style="vertical-align: top; width: 102px;"> to do list<br>
       </th>
       <td>
-      <h3 style="margin-top: 2px; height: 15px;"><span
- style="font-weight: bold;">pyspread 0.1 released</span> <span
- style="font-size: small; font-weight: normal;">(2010-03-20)</span></h3>
-After a long and eventful Alpha period, pyspread has finally reached
-Beta stage.<br>
-I thank all contributors and testers who have helped getting pyspread
-to this point.
-      <p>Pyspread runs pretty stable in CPython. Please note that old
-save files are not compatible. Load them in the old version and copy
-the code to a new version of pyspread via the clipboard.<br>
-Being in Beta means increased code stability. Save files are now going
-to be downwards compatible. However, major beta releases (e. g. 0.1 to
-0.2) may still break compatibility. Such a change may occur only after
-being announced in the previous major beta release. </p>
-      <p>New features: </p>
       <ul>
-        <li>New macro editor dialog.</li>
-        <li>Macros can now contain any Python code.</li>
-        <li>Macros load and save files are now plain text files.</li>
-        <li>Macros are now saved within the pys-file.</li>
-        <li>Macros files are now signed and included in the trusted
-file concept.</li>
-      </ul>
-Bug fixes:
-      <ul>
-        <li>Cells can now be correctly accessed with negative index
-(BUG 2965144)</li>
+        <li>Multiple 3D sheets in a pys file (started)</li>
+        <li>Config dialog (not started)<br>
+        </li>
+        <li>Attribute editing from menu (not started)</li>
+        <li>Chart toolbar (not started)</li>
+        <li>Internationalization (not started)</li>
       </ul>
       </td>
       <td style="vertical-align: top;"><br>
@@ -203,18 +170,13 @@ Bug fixes:
       <th style="vertical-align: top; width: 102px;">Adding your code<br>
       </th>
       <td>
-      <h3 style="margin-top: 1px; height: 16px;"><span
- style="font-weight: bold;">ODF format support but not for now</span> <span
- style="font-size: small; font-weight: normal;">(2009-11-19)</span></h3>
-Standardized file formats are great when it comes to data exchange with
-other Office packages.
-ODF seemed a good choice. However, the parsing code needs too much
-coding time and still performs much too slow.
-Therefore, I have removed the interface from the code base. Starting
-from 0.0.12a, the file format will be an improved pys format. In fact,
-it is compatible to the old pys files.
-      <p>If you need ODF support, you are welcome to contribute. The
-ODF code is still available. </p>
+      <ol>
+        <li>Contact me<br>
+        </li>
+        <li>Get a github account</li>
+        <li>Fork the branch that you would like to work with</li>
+        <li>Issue a pull request when ready</li>
+      </ol>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
