Obfuscated e-mail a bit

--- a/contribute.html
+++ b/contribute.html
@@ -140,7 +140,8 @@ help<br>
       <td>Thank you for wanting to help pyspread. You can help me with
 bug reports, translations, icons, coding, ideas and much more.<br>
       <br>
-To contact me, send me an <a href="mailto://mmanns@gmx.net">e-mail</a>.<br>
+To contact me, send me an e-mail (mmanns &lt; at &gt; gmx &lt;dot&gt;
+net).<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
