Bug tracker switched to github

--- a/contribute.html
+++ b/contribute.html
@@ -121,7 +121,7 @@ h3 {
 |&nbsp;&nbsp; <a style="text-decoration: overline; color: black;"
  class="menu" href="contribute.html">contribute</a>&nbsp;
 |&nbsp;&nbsp;
-<a class="menu" href="http://sourceforge.net/tracker/?group_id=224598"
+<a class="menu" href="https://github.com/manns/pyspread/issues"
  target="_blank">bugs</a><a class="menu"
  href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
 </div>
