--- a/download.html
+++ b/download.html
@@ -121,7 +121,7 @@ h3 {
 |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
 |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
 |&nbsp;&nbsp;
-<a class="menu" href="http://sourceforge.net/tracker/?group_id=224598"
+<a class="menu" href="https://github.com/manns/pyspread/issues"
  target="_blank">bugs</a><a class="menu"
  href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
 </div>
@@ -152,7 +152,8 @@ h3 {
       </th>
       <td style="vertical-align: top;"><a
  href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search">Python
-package index</a><br>
+package
+index</a><br>
       </td>
     </tr>
     <tr>
@@ -162,8 +163,7 @@ package index</a><br>
  href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=search"></a>
       <ol>
         <li> Download the pyspread tarball and extract at a convenient
-place
-          <br>
+place <br>
           <tt><br>
 tar xzvf <span style="font-family: Arial,Helvetica,sans-serif;">pyspread&lt;version&gt;.tar.gz<br>
           <br>
@@ -180,30 +180,24 @@ version requirements</span> that are mentioned on the main page.<br>
         <li>Get install privileges (e.g. become root)<br>
           <br>
         </li>
-        <li> Change into the directory and type
-          <br>
+        <li> Change into the directory and type <br>
           <tt><br>
 python setup.py install</tt> <br>
           <br>
         </li>
         <li> Windows: Replace “python” with your Python interpreter
-(absolute path)
-          <br>
-          <br>
-        </li>
-        <li> Become normal user again
-          <br>
+(absolute path) <br>
           <br>
         </li>
-        <li> Start pyspread by typing
-          <br>
-          <br>
-          <tt>pyspread</tt>
-          <br>
+        <li> Become normal user again <br>
           <br>
         </li>
-        <li> Enjoy
+        <li> Start pyspread by typing <br>
+          <br>
+          <tt>pyspread</tt> <br>
+          <br>
         </li>
+        <li> Enjoy </li>
       </ol>
       </td>
     </tr>
