--- a/docs.html
+++ b/docs.html
@@ -122,7 +122,7 @@ h3 {
  class="menu" href="docs.html">docs</a>&nbsp;
 |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
 |&nbsp;&nbsp;
-<a class="menu" href="http://sourceforge.net/tracker/?group_id=224598"
+<a class="menu" href="https://github.com/manns/pyspread/issues"
  target="_blank">bugs</a><a class="menu"
  href="http://pyspread.wiki.sourceforge.net/" target="_blank"></a>
 </div>
