--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ h3 {
 |&nbsp;&nbsp; <a class="menu" href="docs.html">docs</a>&nbsp;
 |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
 |&nbsp;&nbsp;
-<a class="menu" href="http://sourceforge.net/tracker/?group_id=224598"
+<a class="menu" href="https://github.com/manns/pyspread/issues"
  target="_blank">bugs</a>
 </div>
 <p>
@@ -217,7 +217,8 @@ Due to time restrictions, Windows™ support has been discontinued
 starting with
 version 0.2.0. If you run Windows, get version 0.1.2 from <a
  href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">here</a>.
-If you would like to maintain a Windows version
+If
+you would like to maintain a Windows version
 please contact me.<br>
       <br>
       <span style="text-decoration: underline;">Dependencies </span><br>
