Website contact changed to mailing list

--- a/contribute.html
+++ b/contribute.html
@@ -139,9 +139,21 @@ help<br>
       </th>
       <td>Thank you for wanting to help pyspread. You can help me with
 bug reports, translations, icons, coding, ideas and much more.<br>
-      <br>
-To contact me, send me an e-mail (mmanns &lt; at &gt; gmx &lt;dot&gt;
-net).<br>
+      </td>
+      <td style="vertical-align: top;"><br>
+      </td>
+      <td style="width: 211px;"><br>
+      </td>
+    </tr>
+    <tr>
+      <th
+ style="vertical-align: top; background-color: white; width: 102px;">contact<br>
+      </th>
+      <td>For contributions, patches, development discussions and ideas
+please post to the pyspread-dev mailing list by sending an e-mail to <a
+ href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>. You can <a
+ href="https://mail.gna.org/listinfo/pyspread-dev/">here</a> subscribe
+to the list.<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
