--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@ starting with
 version 0.2.0. If you run Windows, get version 0.1.2 from <a
  href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">here</a>.
 If
-you would like to maintain a Windows version
+you
+would like to maintain a Windows version
 please contact me.<br>
       <br>
       <span style="text-decoration: underline;">Dependencies </span><br>
@@ -247,9 +248,17 @@ functionality of the example files </span><br>
     <tr>
       <th style="vertical-align: top;">contact<br>
       </th>
-      <td style="vertical-align: top;">mmanns &lt; at &gt; gmx &lt; dot
-&gt; net<br>
-      </td>
+      <td style="vertical-align: top;">For user questions or feedback
+please post to the pyspread-users mailing list by sending an e-mail to <a
+ href="mailto:pyspread-users@gna.org">pyspread-users@gna.org</a>. You
+can <a href="https://mail.gna.org/listinfo/pyspread-users/">here</a>
+subscribe to the list.<br>
+      <br>
+For contributions, patches, development discussions and ideas please
+post to the pyspread-dev mailing list by sending an e-mail to <a
+ href="mailto:pyspread-dev@gna.org">pyspread-dev@gna.org</a>. You can <a
+ href="https://mail.gna.org/listinfo/pyspread-dev/">here</a> subscribe
+to the list.</td>
       <td style="vertical-align: top;"><br>
       </td>
       <td><br>
