--- a/contribute.html
+++ b/contribute.html
@@ -200,12 +200,15 @@ to the list.<br>
 </table>
 <p>
 </p>
-<p><span style="font-style: italic;"><small>Copyright 2008-2011 Martin
-Manns</small></span><br style="font-style: italic;">
-<span style="font-style: italic;"><small>Last changed: 23. December 2011</small>
-</span></p>
-<p> <a href="http://validator.w3.org/check?uri=referer"><img
- src="http://www.w3.org/Icons/valid-html401"
- alt="Valid HTML 4.01 Strict" height="31" width="88"></a> </p>
+<p><span style="font-style: italic;"><small>C<font size="-1">opyright
+2008-2011 Martin
+Manns</font></small><font size="-1"><br>
+Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
+ style="font-style: italic;">
+</font>
+</span><font size="-1"><span style="font-style: italic;">Last changed:
+26.
+December 2011
+</span></font></p>
 </body>
 </html>
