--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ h3 {
 |&nbsp;&nbsp; <a class="menu" href="contribute.html">contribute</a>&nbsp;
 |&nbsp;&nbsp;
 <a class="menu" href="https://github.com/manns/pyspread/issues"
- target="_blank">bugs</a>
+ target="blank">bugs</a>
 </div>
 <p>
 </p>
@@ -219,7 +219,8 @@ version 0.2.0. If you run Windows, get version 0.1.2 from <a
  href="http://pypi.python.org/packages/source/p/pyspread/pyspread-0.1.2.tar.gz#md5=501d9d2e150b5dc8a0f44ff303e4cb71">here</a>.
 If
 you
-would like to maintain a Windows version
+would
+like to maintain a Windows version
 please contact me.<br>
       <br>
       <span style="text-decoration: underline;">Dependencies </span><br>
@@ -268,13 +269,14 @@ to the list.</td>
 </table>
 <p>
 </p>
-<p><span style="font-style: italic;"><small>Copyright 2008-2011 Martin
-Manns</small><br style="font-style: italic;">
-</span><span style="font-style: italic;"><small>Last changed: 23.
-December 2011</small>
-</span></p>
-<p> <a href="http://validator.w3.org/check?uri=referer"><img
- src="http://www.w3.org/Icons/valid-html401"
- alt="Valid HTML 4.01 Strict" height="31" width="88"></a> </p>
+<p><span style="font-style: italic;"><small>C<font size="-1">opyright
+2008-2011 Martin
+Manns</font></small><font size="-1"><br>
+Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
+ style="font-style: italic;">
+</font></span><font size="-1"><span style="font-style: italic;">Last
+changed: 26.
+December 2011
+</span></font></p>
 </body>
 </html>
