First steps document added to website

--- a/docs.html
+++ b/docs.html
@@ -138,7 +138,8 @@ h3 {
  style="vertical-align: top; background-color: white; width: 102px;">user
 manual<br>
       </th>
-      <td style="vertical-align: top;">First steps into pyspread.</td>
+      <td style="vertical-align: top;"><a href="First%20steps.html">First
+steps into pyspread</a></td>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="width: 211px;"><br>
@@ -184,7 +185,7 @@ Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font>
 </span><font size="-1"><span style="font-style: italic;">Last changed:
-26.
+30.
 December 2011
 </span></font></p>
 <p><span style="font-style: italic;"><small></small></span></p>
