Table wise paragraphs in First steps ducoment, new screenshot for main website

--- a/index.html
+++ b/index.html
@@ -155,9 +155,10 @@ v3</a>.<br>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="width: 211px;"><a
- href="images/screenshot_wagner_large.png"><img
- style="border: 0px solid ; width: 200px; height: 144px;"
- alt="Pyspread screenshot" src="images/screenshot_wagner_thumb.png"></a><br>
+ href="images/screenshot_main_window_0.2.0.png"><img
+ alt="Pyspread main window"
+ src="images/screenshot_main_window_0.2.0_preview.png"
+ style="border: 0px solid ; width: 200px; height: 154px;"></a><br>
       </td>
     </tr>
     <tr>
@@ -220,7 +221,9 @@ version 0.2.0. If you run Windows, get version 0.1.2 from <a
 If
 you
 would
-like to maintain a Windows version
+like
+to
+maintain a Windows version
 please contact me.<br>
       <br>
       <span style="text-decoration: underline;">Dependencies </span><br>
@@ -243,7 +246,9 @@ functionality of the example files </span><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
-      <td style="width: 211px;"><br>
+      <td style="width: 211px;"><a><img
+ style="border: 0px solid ; width: 200px; height: 144px;"
+ alt="Pyspread screenshot" src="images/screenshot_wagner_thumb.png"></a>
       </td>
     </tr>
     <tr>
@@ -275,7 +280,7 @@ Manns</font></small><font size="-1"><br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font></span><font size="-1"><span style="font-style: italic;">Last
-changed: 26.
+changed: 30.
 December 2011
 </span></font></p>
 </body>
