To-do list on website updated

--- a/contribute.html
+++ b/contribute.html
@@ -166,7 +166,7 @@ to the list.<br>
       <td>
       <ul>
         <li>Multiple 3D sheets in a pys file (started)</li>
-        <li>Config dialog (not started)<br>
+        <li>Config dialog (done)<br>
         </li>
         <li>Attribute editing from menu (not started)</li>
         <li>Chart toolbar (not started)</li>
@@ -207,8 +207,7 @@ Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font>
 </span><font size="-1"><span style="font-style: italic;">Last changed:
-26.
-December 2011
+08. January 2011
 </span></font></p>
 </body>
 </html>
