Image link on index.html fixed

--- a/index.html
+++ b/index.html
@@ -223,7 +223,9 @@ you
 would
 like
 to
-maintain a Windows version
+maintain
+a
+Windows version
 please contact me.<br>
       <br>
       <span style="text-decoration: underline;">Dependencies </span><br>
@@ -246,10 +248,10 @@ functionality of the example files </span><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
-      <td style="width: 211px;"><a><img
- style="border: 0px solid ; width: 200px; height: 144px;"
- alt="Pyspread screenshot" src="images/screenshot_wagner_thumb.png"></a>
-      </td>
+      <td style="width: 211px;"><a
+ href="images/screenshot_wagner_large.png"><img
+ alt="Pyspread screenshot" src="images/screenshot_wagner_thumb.png"
+ style="border: 0px solid ; width: 200px; height: 144px;"></a> </td>
     </tr>
     <tr>
       <th style="vertical-align: top;">contact<br>
@@ -280,8 +282,7 @@ Manns</font></small><font size="-1"><br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font></span><font size="-1"><span style="font-style: italic;">Last
-changed: 30.
-December 2011
+changed: 12. January 2012
 </span></font></p>
 </body>
 </html>
