Full screen view image fixed in First steps document

--- a/First steps.html
+++ b/First steps.html
@@ -690,7 +690,7 @@ instabilities.<br>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><a
- href="images/screenshot_main_window_0.2.0.png"><img
+ href="images/screenshot_new_dialog.png"><img
  alt="Grid dimension dialog"
  src="images/screenshot_new_dialog_preview.png"
  style="border: 0px solid ; width: 200px; height: 141px;"></a><br>
@@ -1056,6 +1056,7 @@ of callings of stateful functions can be controlled.</p>
 attribute
 is stored in the pys save-file, the frozen cell result cache is <b>not</b>.
 
+
       </p>
       </td>
       <td style="vertical-align: top;"><br>
@@ -1420,14 +1421,13 @@ To be done </td>
   </tbody>
 </table>
 <p><span style="font-style: italic;"><small>C<font size="-1">opyright
-2008-2011 Martin
+2008-2012 Martin
 Manns</font></small><font size="-1"><br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
  style="font-style: italic;">
 </font>
 </span><font size="-1"><span style="font-style: italic;">Last changed:
-30.
-December 2011
+06. February 2012
 </span></font></p>
 <p><span style="font-style: italic;"><small></small></span></p>
 </body>
